--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    margin: 0 20px;
     background-color: #141414;
 }
 
@@ -27,8 +28,6 @@ header {
     padding: 16px;
     background-color: #242424;
     border-radius: 12px;
-    height: 100px;
-    width: 100px;
 }
 
 #album {
@@ -46,7 +45,7 @@ header {
 }
 
 #album-info {
-    padding: 8px;
+    padding: 12px;
     cursor: pointer;
 }
 
